samples/_failures_safe/1761619522_2c71c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2ba5a7b.c: In function ‘main’:
./samples/SAFE/__tmp_e2ba5a7b.c:148:16: error: missing terminating " character
  148 |         printf("4. Trans
      |                ^~~~~~~~~
./samples/SAFE/__tmp_e2ba5a7b.c:148:9: error: expected expression at end of input
  148 |         printf("4. Trans
      |         ^~~~~~
./samples/SAFE/__tmp_e2ba5a7b.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2ba5a7b.c:148:9: error: expected declaration or statement at end of input
